# cmake-example

./: CMakeLists.txt  main.c
hello-world/: CMakeLists.txt  hello_world.c
hello-world/hello/: CMakeLists.txt  hello.c
hello-world/world/: CMakeLists.txt  world.c
